# pyfony-demo

./: README.md  env-init.sh  environment.yml  pyproject.toml
src/pyfonydemo/: HelloWorldCommand.py  hello_world.py
src/pyfonydemo/_config/: config_dev.yaml
