[tool.poetry]
name = "pyfony-demo"
version = "1.0.0"
description = "Pyfony Framework demo"
readme = "README.md"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

[tool.poetry.dependencies]
python = "3.8.8"
pyfony-core = "^0.8.0"

[pyfony.bootstrap]
root_module_name = "pyfonydemo"
allowed_environments = ["dev", "test", "prod"]
